--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
   <head> 
+    <meta charset = "UTF-8">
+    <meta name = "author" content = "Kyle Aluma">
+    <meta name = "description" content = "This page contains all the things I am learning how to create as I learn HTML">
     <title>My First webpage</title>
+    <link rel = "icon" href = "pexels-el-evangelista-171946-1070345.jpg" type = "image/x-icon" >
+    <link rel = "stylesheet" href = "main.css" type = "text/css">
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p></p>
+    <p>This is my first webpage</p>
   </body>
 </html>
