--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+
+    <hr>
+
+    <h2>I'm ready to learn HTML</h2>
     <p>This is my first webpage</p>
+
+    <h3>My daily Schedule</h3>
+    <p>Let me tell how :
+        <br>&nbsp;&nbsp;&nbsp;...I learn more about web dev.
+        <br>&nbsp;&nbsp;&nbsp;...I plan out my Schedule
+        <br>&nbsp;&nbsp;&nbsp;...I use resources from <abbr title="Mozilla Developer Network"> MDN</abbr>
+    </p>
+
+    <hr>
+    
+    <h2>I am also planning a vacation</h2>
+    <p>I've been working hard and <em>really need a gateway</em></p>
+    <p>I live in <abbr title = "Kansas">KS</abbr> so I want to visit a beach</p>
+
+    <h3>Place I'd like to Visit</h3>
+    <p>I've heard good things about the Caribbean</p>
+    <p>I've heard good things about going here: </p>
+    <address>
+      Southern Palms Beach Resort<br>
+      Diani, Ukunda, South Coast<br>
+      Kwale, Kenya, Kenya 00501<br>
+    </address>
+    
+    <!--TODO: Add more places-->
+    <h3>Place I want to Avoid</h3>
+    <p>Anywhere cold. <strong>No way!</strong> </p>
+
+    <hr>
+    &lt;&lt;&lt; &copy; Kyle Aluma &gt;&gt;&gt;
   </body>
 </html>
