--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <p>This is my first webpage</p>
 
     <h3>My daily Schedule</h3>
-    <p>Let me tell how :
-        <br>&nbsp;&nbsp;&nbsp;...I learn more about web dev.
-        <br>&nbsp;&nbsp;&nbsp;...I plan out my Schedule
-        <br>&nbsp;&nbsp;&nbsp;...I use resources from <abbr title="Mozilla Developer Network"> MDN</abbr>
-    </p>
+    <p>Let me tell you how:</p>
+        <ol>
+          <li>...I learn more about web dev.</li>
+          <li>...I plan out my Schedule</li>
+          <li>...I use resources from <abbr title="Mozilla Developer Network"> MDN</abbr></li>
+        </ol>
 
     <hr>
     
@@ -30,17 +31,30 @@
     <p>I live in <abbr title = "Kansas">KS</abbr> so I want to visit a beach</p>
 
     <h3>Place I'd like to Visit</h3>
-    <p>I've heard good things about the Caribbean</p>
-    <p>I've heard good things about going here: </p>
-    <address>
-      Southern Palms Beach Resort<br>
-      Diani, Ukunda, South Coast<br>
-      Kwale, Kenya, Kenya 00501<br>
-    </address>
-    
+    <ul>
+    <li><p>I've heard good things about the Caribbean</p></li>
+    <li>
+      <p>I've heard good things about going here: </p>
+      <address>
+        Southern Palms Beach Resort<br>
+        Diani, Ukunda, South Coast<br>
+        Kwale, Kenya, Kenya 00501<br>
+      </address>
+      </li>
+    </ul>
+
     <!--TODO: Add more places-->
-    <h3>Place I want to Avoid</h3>
-    <p>Anywhere cold. <strong>No way!</strong> </p>
+    <h3>Places I want to Avoid</h3>
+    <dl>
+        <dt>North Pole</dt>
+        <dd>I hear this is <strong>cold</strong></dd>
+
+        <dt>South pole</dt>
+        <dd>This is also cold</dd>
+
+        <dt>Mountain Tops</dt>
+        <dd>These are also cold</dd>
+    </dl>
 
     <hr>
     &lt;&lt;&lt; &copy; Kyle Aluma &gt;&gt;&gt;
