--- a/index.html
+++ b/index.html
@@ -8,55 +8,75 @@
     <link rel = "icon" href = "pexels-el-evangelista-171946-1070345.jpg" type = "image/x-icon" >
     <link rel = "stylesheet" href = "main.css" type = "text/css">
   </head>
+
   <body>
-    <h1>Hello World!</h1>
+    <h1>My Goals for the Year</h1>
 
     <hr>
 
-    <h2>I'm ready to learn HTML</h2>
-    <p>This is my first webpage</p>
-
-    <h3>My daily Schedule</h3>
-    <p>Let me tell you how:</p>
-        <ol>
-          <li>...I learn more about web dev.</li>
-          <li>...I plan out my Schedule</li>
-          <li>...I use resources from <abbr title="Mozilla Developer Network"> MDN</abbr></li>
-        </ol>
-
-    <hr>
-    
-    <h2>I am also planning a vacation</h2>
-    <p>I've been working hard and <em>really need a gateway</em></p>
-    <p>I live in <abbr title = "Kansas">KS</abbr> so I want to visit a beach</p>
-
-    <h3>Place I'd like to Visit</h3>
-    <ul>
-    <li><p>I've heard good things about the Caribbean</p></li>
-    <li>
-      <p>I've heard good things about going here: </p>
-      <address>
-        Southern Palms Beach Resort<br>
-        Diani, Ukunda, South Coast<br>
-        Kwale, Kenya, Kenya 00501<br>
-      </address>
-      </li>
-    </ul>
-
-    <!--TODO: Add more places-->
-    <h3>Places I want to Avoid</h3>
-    <dl>
-        <dt>North Pole</dt>
-        <dd>I hear this is <strong>cold</strong></dd>
-
-        <dt>South pole</dt>
-        <dd>This is also cold</dd>
-
-        <dt>Mountain Tops</dt>
-        <dd>These are also cold</dd>
-    </dl>
+    <nav>
+      <ul>
+        <li>
+          <a href="#html">Learn HTML</a>
+        </li>
+        <li>
+          <a href="#vacation">Planning a vacation</a>
+        </li>
+      </ul>
+    </nav>
 
     <hr>
-    &lt;&lt;&lt; &copy; Kyle Aluma &gt;&gt;&gt;
+    <section id = "html">
+
+      <h2>I'm ready to learn HTML</h2>
+      <p>This is my first webpage</p>
+
+      <h3>My daily Schedule</h3>
+      <p>Let me tell you how:</p>
+          <ol>
+            <li>...I learn more about web dev.</li>
+            <li>...I plan out my Schedule</li>
+            <li>...I use resources from <abbr title="Mozilla Developer Network"><a href="https://developer.mozilla.org/" target="_blank">MDN</a> </abbr></li>
+          </ol> 
+    </section>  
+
+    <hr>
+    <section id = "vacation">
+      <h2>I am also planning a vacation</h2>
+      <p>I've been working hard and <em>really need a gateway</em></p>
+      <p>I live in <abbr title = "Kansas">KS</abbr> so I want to visit a beach</p>
+
+      <h3>Place I'd like to Visit</h3>
+      <ul>
+      <li><p>I've heard good things about the Caribbean</p></li>
+      <li>
+        <p>I've heard good things about going here: </p>
+        <address>
+          Southern Palms Beach Resort<br>
+          Diani, Ukunda, South Coast<br>
+          Kwale, Kenya, Kenya 00501<br>
+        </address>
+        </li>
+      </ul>
+
+      <!--TODO: Add more places-->
+      <h3>Places I want to Avoid</h3>
+      <dl>
+          <dt>North Pole</dt>
+          <dd>I hear this is <strong>cold</strong></dd>
+
+          <dt>South pole</dt>
+          <dd>This is also cold</dd>
+
+          <dt>Mountain Tops</dt>
+          <dd>These are also cold</dd>
+      </dl>
+    </section>
+
+    <hr>
+    &lt;&lt;&lt; &copy; <a href="about.html">Kyle Aluma</a>&gt;&gt;&gt;
+    <p>
+      <a href="#">Back to top</a>
+    </p>
   </body>
 </html>
