Chapter 6 : Add images

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
       <h2>I'm ready to learn HTML</h2>
       <p>This is my first webpage</p>
+      <img src="img/pexels-followingnyc-8371016.jpg" alt="NY-City" title = "I am learning NYC" width = "300" height="400">
+      <figure>
+        <figcaption>
+          An example of HTML5 code
+        </figcaption>
+        <p>
+           <code>&lt;h1&gt;Hello world&lt;h1&gt;</code>
+        </p>
+      </figure>
 
       <h3>My daily Schedule</h3>
       <p>Let me tell you how:</p>
@@ -41,14 +50,23 @@
     </section>  
 
     <hr>
+    
     <section id = "vacation">
       <h2>I am also planning a vacation</h2>
       <p>I've been working hard and <em>really need a gateway</em></p>
       <p>I live in <abbr title = "Kansas">KS</abbr> so I want to visit a beach</p>
 
-      <h3>Place I'd like to Visit</h3>
+      <h3>Places I'd like to Visit</h3>
       <ul>
-      <li><p>I've heard good things about the Caribbean</p></li>
+      <li>
+        <p>I've heard good things about the Caribbean</p>
+        <figure>
+          <img src="img/pexels-jeshoots-7433.jpg" alt="Somewhere cars" title = "I love cars" width = "400" height = "250" loading = "lazy">
+          <figcaption>
+            Person driving car
+          </figcaption>
+        </figure> 
+      </li>
       <li>
         <p>I've heard good things about going here: </p>
         <address>
@@ -56,6 +74,13 @@
           Diani, Ukunda, South Coast<br>
           Kwale, Kenya, Kenya 00501<br>
         </address>
+        <figure>
+          <img src="img/pexels-lee-starry-1667861-32418818.jpg" alt="Lee Starry" title = "Lee-starry is funny" loading = 'lazy'
+          width = "400" height = "450">
+          <figcaption>
+            A building taken a photo by Lee
+          </figcaption>
+        </figure>
         </li>
       </ul>
 
