--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <li>
             <a href="#vacation">Planning a vacation</a>
           </li>
+          <li>
+            <a href="#contact">Contact me</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -161,7 +164,105 @@
           </dl>
         </section>
       </article>
+
+      <hr>
+
+      <article id = "contact">
+        <h2>Contact me</h2>
+        <p>I'd really like to hear from you</p>
+
+        <form action="https://httpbin.org/get" method = "get">
+          <fieldset>
+            <legend>Personal Info</legend>
+            <p>
+              <label for="firstName">First Name</label>
+              <input type="text" name="firstName" id="firstName" placeholder="Kyle" autocomplete = "on" required autofocus>
+            </p>
+            <p>
+              <label for="lastName">Last Name</label>
+              <input type="text" name="lastName" id="lastName" placeholder="Doe" autocomplete = "on" required>
+            </p>
+            <p>
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" placeholder="your secret"  required>
+            </p>
+            <p>
+              <label for="phone">phone</label>
+              <input type="tel" name="phone" id="phone" placeholder="5555555555" pattern = "[0-9]{3}[0-9]{3}[0-9]{4}" required>
+            </p>
+            <p>
+              <label for="decade">Favourite Decade</label>
+              <input type="number" name="decade" id="decade" min = "1950" max = "2020" 
+              step = "10" value = "1980" required>
+            </p>
+            <p>
+              <label for="coffee">Favourite coffee: </label>
+              <select name="coffee" id="coffee" multiple size = "5">
+                  <optgroup label = "Coffees">
+                    <option value="regular coffee">Regular coffee</option>
+                    <option value="iced coffee">Iced cofee</option>
+                  </optgroup>
+                  <optgroup label = "Expresso Drinks">
+                    <option value="latte" selected>Latte</option>
+                    <option value="Cappuccino">Cappuccino</option>
+                    <option value="cortado">cortado</option>
+                    <option value="Americano">Americano</option>
+                    <option value="other">Other</option>
+                  </optgroup>
+              </select>
+            </p>
+          </fieldset>
+          <br>
+          <fieldset>
+            <legend>What is your favourite food?</legend>
+              <p>
+                <input type="radio" name = "food" id = "pizza" value = "pizza">
+                <label for="pizza">pizza</label>
+              </p>
+              <p>
+                <input type="radio" name = "food" id = "tacos" value = "tacos">
+                <label for="tacos">Tacos</label>
+              </p>
+              <p>
+                <input type="radio" name = "food" id = "other" value = "other">
+                <label for="other">Other</label>
+              </p>
+          </fieldset>
+          <br>
+          <fieldset>
+            <legend>Do you have pets</legend>
+            <p>
+              <input type="checkbox" name = "pets" id = "dog" value = "dog">
+              <label for = "dog">Dog</label>
+            </p>
+            <p>
+              <input type="checkbox" name = "pets" id = "cat" value = "cat">
+              <label for = "cat">Cat</label>
+            </p>
+            <p>
+              <input type="checkbox" name = "pets" id = "fish" value = "fish">
+              <label for = "fish">Fish</label>
+            </p>
+            <p>
+              <input type="checkbox" name = "pets" id = "otherPet" value = "otherPet">
+              <label for = "otherPet">Other</label>
+            </p>
+          </fieldset>
+          <br>
+          <fieldset>
+            <legend>Send me a note</legend>
+            <label for="message">Your message</label>
+            <br>
+            <textarea name="message" id="message" cols = "30" rows = "10" placeholder="Type your message here"></textarea>
+          </fieldset>
+          <br>
+          <button type = "submit">Submit</button>
+          <button type="submit" formaction="https://httpbin.org/post" formmethod="post">Post</button>
+          <button type="reset">Reset</button>
+        </form>
+      </article>
     </main>
+    
     <hr>
     <footer>
       <p>
