--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <article id = "html">
-        <button><a href="project/index.html">GO TO LITTLE TACO WEBSITE</a></button>
+        <button style = "background-color: black; color:white; padding:10px"><a href="project/index.html">GO TO LITTLE TACO WEBSITE</a></button>
         <h2>I'm ready to learn HTML</h2>
         <p>This is my first webpage</p>
         <section>
